test/parser/if-no-brace.delta
// RUN: not %delta -parse %s | %FileCheck %s

func main() {
    // CHECK: [[@LINE+1]]:16: error: expected '{', got 'return'
    if (false) return;
}
